--- a/dinner.css
+++ b/dinner.css
@@ -32,6 +32,14 @@ h1 {
     transform: translate(-50%);
 }
 
+p {
+    color: white;
+    font-family: Arial, sans-serif;
+    padding: 10px 20px;
+    margin: 0 10px;
+    font-size: 14px;
+}
+
 button {
     display: block;
     margin: 20px auto;
@@ -45,4 +53,9 @@ button {
     top: 65%;
     left: 50%;
     transform: translate(-50%);
+}
+
+#about {
+    background: #777777;
+    padding: 5px;
 }
