--- a/dinner.css
+++ b/dinner.css
@@ -33,10 +33,26 @@ h1 {
 }
 
 p {
-    color: white;
+    color: #ffffff;
     font-family: Arial, sans-serif;
     padding: 10px 20px;
     margin: 0 10px;
+    font-size: 14px;
+}
+
+p1 {
+    color: #005eff;
+    font-family: Arial, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+}
+
+p2 {
+    color: #005eff;
+    font-family: Arial, sans-serif;
+    padding: 0;
+    margin: 0;
     font-size: 14px;
 }
 
@@ -53,6 +69,18 @@ button {
     top: 65%;
     left: 50%;
     transform: translate(-50%);
+}
+
+button1 {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: #fff;
+    color: #333;
+    border: none;
+    cursor: pointer;
+    position: absolute;
 }
 
 #about {
