--- a/dinner.css
+++ b/dinner.css
@@ -66,24 +66,21 @@ button {
     border: none;
     cursor: pointer;
     position: absolute;
+}
+
+#options-btn {
     top: 65%;
     left: 50%;
     transform: translate(-50%);
 }
 
-button1 {
-    display: block;
-    margin: 20px auto;
-    padding: 10px 20px;
-    font-size: 18px;
-    background-color: #fff;
-    color: #333;
-    border: none;
-    cursor: pointer;
-    position: absolute;
-}
-
 #about {
     background: #777777;
     padding: 5px;
+}
+
+#questions {
+    background: rgb(188, 222, 234);
+    margin: 10px;
+    padding: 10px;
 }
