Improved Questions + More
- Questions now use check boxes
- JavaScript code is slightly better written
- New CSS on results page

--- a/dinner.css
+++ b/dinner.css
@@ -79,7 +79,7 @@ button {
     padding: 5px;
 }
 
-#questions {
+.enclosed-section {
     background: rgb(188, 222, 234);
     margin: 10px;
     padding: 10px;
