--- a/dinner.css
+++ b/dinner.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffcea6;
+    background-color: #c3eaff;
     margin: 0;
     padding: 0;
 }
@@ -84,3 +84,11 @@ button {
     margin: 10px;
     padding: 10px;
 }
+
+.title {
+    max-width: 700px;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
