--- a/dinner.css
+++ b/dinner.css
@@ -33,26 +33,18 @@ h1 {
 }
 
 p {
+    color: #005eff;
+    font-family: Arial, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+}
+
+#about p {
     color: #ffffff;
     font-family: Arial, sans-serif;
     padding: 10px 20px;
     margin: 0 10px;
-    font-size: 14px;
-}
-
-p1 {
-    color: #005eff;
-    font-family: Arial, sans-serif;
-    padding: 0;
-    margin: 0;
-    font-size: 14px;
-}
-
-p2 {
-    color: #005eff;
-    font-family: Arial, sans-serif;
-    padding: 0;
-    margin: 0;
     font-size: 14px;
 }
 
