--- a/dinner.css
+++ b/dinner.css
@@ -66,6 +66,12 @@ button {
     transform: translate(-50%);
 }
 
+#more-btn {
+    top: 277%;
+    left: 95%;
+    transform: translate(-50%);
+}
+
 #about {
     background: #777777;
     padding: 5px;
