--- a/dinner.css
+++ b/dinner.css
@@ -82,7 +82,14 @@ button {
     margin: 10px;
     padding: 10px;
 }
-
+.loading{
+     border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite
+}
 .title {
     max-width: 700px;
     text-align: center;
