--- a/dinner.css
+++ b/dinner.css
@@ -175,3 +175,9 @@ h3 {
   width: 600px;  /* Adjust the width as needed */
   height: 600px; /* Adjust the height as needed */
 }
+
+.results-section {
+  background: #afc9d7;
+  margin: 10px;
+  padding: 10px;
+}
